--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -130,6 +130,10 @@
         Toggle Filtering
     </button>
 
+    <button class="hide-button" id="disableBtn" style="margin-top: 10px; background: #e53e3e;">
+        Disable All Styling
+    </button>
+
     <div class="status" id="status">
         Videos hidden successfully!
     </div>
